--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,10 @@
-/* <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+/* <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}"> */
+<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet"> */
 
+{% load static %}
   h2 a {
   color: #79f78c;
 }
